Kubernetes_Practical_tasks/7.Ingresses/T3/green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-color
  namespace: default
  labels:
    color: green
    app: selected
spec:
  replicas: 1
  selector:
    matchLabels:
      color: green
  template:
    metadata:
      labels:
        color: green
        app: selected
    spec:
      containers:
        - name: color
          image: sbeliakou/color:v1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: green-svc
spec:
  type: ClusterIP
  selector:
    color: green
  ports:
    - port: 8080
      targetPort: 80
