Kubernetes_Practical_tasks/7.Ingresses/T3/red.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: red-color
  namespace: default
  labels:
    color: red
    app: selected
spec:
  replicas: 3
  selector:
    matchLabels:
      color: red
  template:
    metadata:
      labels:
        color: red
        app: selected
    spec:
      containers:
        - name: color
          image: sbeliakou/color:v1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: red-svc
spec:
  type: ClusterIP
  selector:
    color: red
  ports:
    - port: 8080
      targetPort: 80
