Kubernetes_Practical_tasks/7.Ingresses/T3/switch.yaml
apiVersion: v1
kind: Service
metadata:
  name: switch
spec:
  type: ClusterIP
  selector:
    app: selected
  ports:
    - port: 80
      targetPort: 80
